<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:id="@+id/llTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDesc"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description" />

        </LinearLayout>

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            />

    </FrameLayout>
</androidx.cardview.widget.CardView>